// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AlertLabel matches snapshot 1`] = `
<div
  className="gcNQWW"
  type="info"
>
  <span
    className="label__text"
  />
</div>
`;

exports[`AlertLabel should render type = error 1`] = `
<div
  className="VPDfB"
  type="error"
>
  <span
    className="label__text"
  >
    error
  </span>
</div>
`;

exports[`AlertLabel should render type = healthy 1`] = `
<div
  className="iXwUDJ"
  type="healthy"
>
  <span
    className="label__text"
  >
    healthy
  </span>
</div>
`;

exports[`AlertLabel should render type = important 1`] = `
<div
  className="ghhLOP"
  type="important"
>
  <span
    className="label__text"
  >
    important
  </span>
</div>
`;

exports[`AlertLabel should render type = info 1`] = `
<div
  className="gcNQWW"
  type="info"
>
  <span
    className="label__text"
  >
    info
  </span>
</div>
`;

exports[`AlertLabel should render type = success 1`] = `
<div
  className="cWpaXy"
  type="success"
>
  <span
    className="label__text"
  >
    success
  </span>
</div>
`;

exports[`AlertLabel should render type = unknown 1`] = `
<div
  className="dPvPTo"
  type="unknown"
>
  <span
    className="label__text"
  >
    unknown
  </span>
</div>
`;

exports[`AlertLabel should render type = warning 1`] = `
<div
  className="jifMBH"
  type="warning"
>
  <span
    className="label__text"
  >
    warning
  </span>
</div>
`;
